--- a/log-in.html
+++ b/log-in.html
@@ -4,20 +4,28 @@
 <head>
   <meta charset="utf-8">
   <title>Project</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <div class="header">
+    <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
+  </div>
+  <div class="Form-div">
+    <form class="" id="LogInForm" method="post" action="\log-in">
+      <h1 class="h3 mb-3 fw-normal" style="text-align:center;">Please log in.</h1>
+      <label for="LogInEmail" class="visually-hidden">Email address</label>
+      <input type="email" class="form-control" name="UserEmail" id="LogInEmail" placeholder="Email address">
+      <label for="LogInPassword" class="visually-hidden">Password</label>
+      <input type="password" class="form-control" name="UserPassword" id="LogInPassword" placeholder="Password">
+      <button class="w-100 btn btn-primary" type="submit" id="LogInButton" style="margin-top:20px;">Log In</button>
+    </form>
+  </div>
 
-  <form class="" id="LogInForm" method="post" action="\log-in">
-    <label>Email address</label>
-    <input type="email" name="UserEmail" id="LogInEmail" placeholder="Email address">
-    <label>Password</label>
-    <input type="password" name="UserPassword" id="LogInPassword" placeholder="Password">
-    <button type="submit" id="LogInButton">Log In</button>
-  </form>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
