--- a/sign-up.html
+++ b/sign-up.html
@@ -28,8 +28,12 @@
     </form>
   </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
+  <footer>
+      <p>Copyright ⓒ 2020</p>
+  </footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
