--- a/log-in.html
+++ b/log-in.html
@@ -26,7 +26,9 @@
     </form>
   </div>
 
-
+  <footer>
+      <p>Copyright ⓒ 2020</p>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
